--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/aranga-au/node-budget-mate/issues"
   },
-  "homepage": "https://github.com/aranga-au/node-budget-mate#readme"
+  "homepage": "https://github.com/aranga-au/node-budget-mate#readme",
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0"
+  }
 }
