--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0"
+  },
+  "dependencies": {
+    "aws-lambda-http": "^1.0.6",
+    "mysql": "^2.12.0"
   }
 }
