--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+build
 
 # Dependency directories
 node_modules
@@ -36,3 +36,4 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 .idea
+
