--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build
 dist
+config.js
 
 # Dependency directories
 node_modules
@@ -38,3 +39,4 @@ jspm_packages
 .node_repl_history
 .idea
 
+/config.js
