--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "aws-lambda-http": "^1.0.11",
-    "lodash": "^4.17.2",
+    "jwt-acl-manager": "^1.0.7",
     "mysql": "^2.12.0"
   }
 }
