--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "aws-lambda-http": "^1.0.12",
     "jwt-acl-manager": "^1.0.12",
     "lodash": "^4.17.4",
-    "mysql": "^2.12.0"
+    "mysql": "^2.12.0",
+    "bcrypt": "^1.0.2",
   }
 }
