--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "jwt-acl-manager": "^1.0.12",
     "lodash": "^4.17.4",
     "mysql": "^2.12.0",
-    "bcrypt": "^1.0.2",
+    "bcrypt": "^1.0.2"
   }
 }
